LPS-187171 LPS-191549 portal-search-admin-web: Fix empty spacing in modal

--- a/modules/apps/portal-search/portal-search-admin-web/src/main/resources/META-INF/resources/css/_index_actions.scss
+++ b/modules/apps/portal-search/portal-search-admin-web/src/main/resources/META-INF/resources/css/_index_actions.scss
@@ -62,11 +62,6 @@
 
 html#{$cadmin-selector} {
 	.reindex-actions-confirmation-modal-body {
-		.custom-checkbox {
-			bottom: 5px;
-			position: absolute;
-		}
-
 		.disk-space-panel {
 			.collapse-button-closed {
 				display: none;
